# MyPitch

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: songs_generated.csv
mockup/: design.html  icon-colors.html  icon-preview.html  icon-simplified.html
src/: App.tsx  styles.css  tauri-plugin-dialog.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: songs.csv
src-tauri/src/: main.rs  pitch.rs
src-tauri/src/songs/: fit.rs  mod.rs
tools/: generate-icon.mjs
tools/audio_analyzer/: analyze.py  requirements.txt
